Some more stuff

--- a/theApp/static/styles/style.css
+++ b/theApp/static/styles/style.css
@@ -1,6 +1,6 @@
 #promptBox{
     background-color: grey;
-    color: blue;
+    color: white;
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
