--- a/theApp/templates/index.html
+++ b/theApp/templates/index.html
@@ -8,13 +8,15 @@
 </head>
 <body id="body">
     <div id="promptBox">
-        <p id="prompt">Enter a sentence.</p>
+        <p id="prompt">Emoji Translator</p>
+
+        <form>
+            <label for="fname">Sentence:</label><br>
+            <input type="text" id="userInput" name="userInput"><br>
+        </form>
+
     </div>
 
-    <form>
-        <label for="fname">Sentence:</label><br>
-        <input type="text" id="userInput" name="userInput"><br>
-      </form>
 
 </body>
 </html>
